# JAIR

./: .gitignore  BUILD_DEB.sh  BUILD_SNAP.sh  COPYING  Cargo.toml  DEBUG_SNAP.sh  FLATPAK_TO_SNAP.sh  INSTALL_SNAP.sh  README.md  TROUBLESHOOTING.md  codes.lsb.jair.json  jair_1.0.0_amd64.deb  jair_1.0.1_amd64.deb  meson.build
data/: codes.lsb.jair.desktop.in  codes.lsb.jair.gschema.xml  codes.lsb.jair.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  en.po  es.po  jair.pot  meson.build
snap/: README.md  snapcraft.metadata.yaml  snapcraft.yaml
snap/hooks/: configure  install
src/: application.rs  jair.gresource.xml  main.rs  meson.build  preferences.rs  preferences.ui  window.rs  window.ui
src/models/: android_sizes.rs  generic_sizes.rs  ios_sizes.rs  mod.rs  size.rs
src/services/: mod.rs  processor.rs
